--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+html,body,
+#root,.app,
+.content{
+  height: 100%;
+  width: 100%;
+  font-family: 'Source Sans Pro' , sans-serif;
+}
+.app{
+  display: flex;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track{
+  background: #6a738a;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #3a4256;
+}
+
+::-webkit-scrollbar-track:hover{
+  background: #57617a;
 }
